[package]
name = "garter"
version = "0.3.0"
edition.workspace = true
license = "Apache-2.0"
description = "Plugin-chain runner for SIP003u shadowsocks plugins."
repository = "https://github.com/bindreams/hole"
homepage = "https://github.com/bindreams/hole"
readme = "README.md"
keywords = ["shadowsocks", "sip003", "plugin", "proxy"]
categories = ["network-programming"]

[package.metadata.hole-release]
group = "garter"

[lints]
workspace = true

[features]
# Exposes the `test_utils` public module. Off by default — enabled
# only when running garter's own tests (set on the [[test]] entries
# below via `required-features`) or by external consumers that want
# to use `WaitableWriter` in their own tests. Production builds of
# downstream crates (e.g. `hole`) do NOT enable this and therefore
# do NOT pull in `tracing-subscriber`.
test-utils = ["dep:tracing-subscriber"]

[dependencies]
bitflags = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
# Optional: needed only by `test_utils::WaitableWriter`'s `MakeWriter`
# impl. Gated on the `test-utils` feature.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true }
thiserror = "2"
contracts = { workspace = true }
async-trait = { workspace = true }

[lib]
harness = false

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
socket2 = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Enable `tokio::time::pause` / `advance` / `resume` for tests that need
# virtual-clock control. Cargo unions this with the main deps `full`
# feature set; production builds do NOT get test-util.
tokio = { version = "1", features = ["test-util"] }

[[test]]
name = "chain_integration"
path = "tests/chain_integration.rs"
harness = false

[[test]]
name = "tap_integration"
path = "tests/tap_integration.rs"
harness = false
# Pulls in `WaitableWriter` via the `test-utils` feature.
required-features = ["test-utils"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = ["Win32_Networking_WinSock"] }
