[package]
name = "hole-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "hole_gui"
harness = false

[[bin]]
name = "hole"
path = "src/main.rs"

[dependencies]
hole-common = { path = "../common" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
interprocess = { version = "2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
dirs = "6"

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }

[build-dependencies]
tauri-build = "2"
resvg = "0.45"
png = "0.17"
ico = "0.4"
