[package]
name = "hole-gui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "hole_gui"
harness = false

[[bin]]
name = "hole"
path = "src/main.rs"

[dependencies]
hole-common = { path = "../common" }
hole-bridge = { path = "../bridge" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
thiserror = "2"
tempfile = "3"
base64 = "0.22"
contracts = "0.6"
dirs = "6"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
ureq = { version = "3", features = ["json"] }
sha2 = "0.11"
minisign-verify = "0.2"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
windows = { version = "0.62", features = [
    "Win32_UI_Shell",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tauri-build = "2"
semver = "1"
resvg = "0.45"
png = "0.18"
ico = "0.5"
ureq = "3"
zip = "8"
sha2 = "0.11"
