[package]
name = "handle-holders"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
harness = false

[[test]]
name = "live_holders"
path = "tests/live_holders.rs"
harness = false

[dependencies]
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Wdk_Foundation",
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
skuld = { workspace = true }
tempfile = "3"
