[package]
name = "handle-holders"
version = "0.3.0"
edition = "2021"
publish = false

[package.metadata.hole-release]
group = "hole"

[lints]
workspace = true

[lib]
harness = false

[[bin]]
name = "hold_file"
path = "src/bin/hold_file.rs"

[[test]]
name = "live_holders"
path = "tests/live_holders.rs"
harness = false

[dependencies]
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Wdk_Foundation",
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
tempfile = "3"
# Used by the ctor-linkage regression test for #301.
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
