[package]
name = "hole"
version = "0.2.0"
edition = "2021"
publish = false

[package.metadata.hole-release]
group = "hole"

[lints]
workspace = true

[features]
# `tauri/custom-protocol` flips the Tauri build from dev mode
# (`cfg(dev) = true`, webview loads `devUrl`) to production mode
# (`cfg(dev) = false`, webview loads the bundled `tauri.localhost` custom
# protocol). The Tauri CLI sets this flag automatically for
# `npx tauri build`; plain `cargo build --release` does not. Default-on so
# production builds (msi-installer / release CI) just work. Dev paths
# (build.yaml's `hole` and `hole-tests` targets, scripts/dev.py) pass
# `--no-default-features` to keep `cfg(dev) = true` for the Vite-served
# workflow. See bindreams/hole#372 for the incident.
default = ["tauri/custom-protocol"]
# Passthrough to hole-common's dev-only minidump writer. NON-DEFAULT. The
# dev/test build paths (build.yaml hole / hole-tests) pass
# `--features tombstone/crash-dumps` directly; this alias lets a hand-run
# `cargo build -p hole --features hole/crash-dumps` reach the same gate.
crash-dumps = ["hole-common/crash-dumps"]

[lib]
name = "hole"
harness = false

[[bin]]
name = "hole"
path = "src/main.rs"
harness = false

[dependencies]
hole-common = { path = "../common" }
tombstone = { path = "../tombstone" }
hole-bridge = { path = "../bridge" }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
time = { version = "0.3", features = ["serde-well-known"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
thiserror = "2"
tempfile = "3"
base64 = "0.22"
contracts = "0.6"
dirs = "6"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
ureq = { version = "3", features = ["json"] }
sha2 = "0.11"
minisign-verify = "0.2"
zip = { version = "8", default-features = false, features = ["deflate"] }
same-file = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
windows = { version = "0.62", features = [
    "Win32_UI_Shell",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# Used by `setup::repair` to walk the user data dir on a one-shot
# ownership repair triggered by the elevated `bridge install`. macOS-only
# because the bug it fixes (osascript-admin elevation creating user-home
# files as root) doesn't occur on Windows (UAC same-user elevation).
walkdir = "2"

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
garter = { path = "../garter" }
filetime = "0.2"

[build-dependencies]
tauri-build = "2"
xtask-lib = { path = "../../xtask-lib" }
resvg = "0.47"
png = "0.18"
ico = "0.5"
