[package]
name = "kill-group"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Spawn a child as the root of a process-tree kill-group (Windows Job Object / Unix process group) so the whole descendant tree dies as a unit."
repository = "https://github.com/bindreams/hole"
homepage = "https://github.com/bindreams/hole"
readme = "README.md"
keywords = ["process", "subprocess", "job-object", "process-group", "kill"]
categories = ["os"]

[package.metadata.hole-release]
group = "kill-group"

[lints]
workspace = true

[lib]
harness = false

[dependencies]
tokio = { version = "1", features = ["process"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",                    # SECURITY_ATTRIBUTES param of CreateJobObjectW
    "Win32_System_Console",              # GenerateConsoleCtrlEvent (CTRL_BREAK)
    "Win32_System_JobObjects",
    "Win32_System_Threading",            # CREATE_SUSPENDED / OpenThread / ResumeThread
    "Win32_System_Diagnostics_ToolHelp", # thread enumeration for the post-assign resume
] }

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
tokio = { version = "1", features = ["full"] }
