[package]
name = "payload-archive"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish = false

[lints]
workspace = true

[lib]
harness = false

[dependencies]
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
tar = "0.4"
flate2 = "1"

[dev-dependencies]
skuld = { workspace = true }
tempfile = "3"
