[package]
name = "tombstone"
version = "0.1.0"
edition.workspace = true
# minidump-writer 0.12 floor is 1.88; crash-handler 0.7 floor is 1.85.
# Installed toolchain (1.93) clears both; this records the floor loudly.
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

# skuld's custom-test-main pattern requires the lib's libtest harness be
# disabled (the crate provides its own `fn main` via skuld::run_all).
[lib]
harness = false

[features]
# Dev/test-only: links minidump-writer so on_crash can write a
# memory-bearing .dmp. NON-DEFAULT (opposite polarity to tauri/custom-protocol)
# so release binaries never link minidump-writer — a privacy VPN's process
# memory holds keys + user traffic. See bindreams/hole#438 §3/§5.4.
crash-dumps = ["dep:minidump-writer"]
# Builds the `crash_child` helper bin (which links sadness-generator). Enabled
# ONLY by the test workflow (`cargo nextest run -p tombstone --features
# crash-child,...`) so plain `cargo build --workspace` does NOT compile the
# bin and never needs sadness-generator. See bindreams/hole#438 (review M1/M2).
crash-child = ["dep:sadness-generator"]

[dependencies]
crash-handler = { workspace = true }
minidump-writer = { workspace = true, optional = true }
# OPTIONAL NON-dev dep gated behind the `crash-child` feature: the helper bin
# is the only consumer. NOT a [dev-dependency] — that would make it
# unreachable from the [[bin]] under the test build. See review M1/M2.
sadness-generator = { workspace = true, optional = true }
tracing = "0.1"

[dev-dependencies]
skuld = { workspace = true }
hole-test-observability = { path = "../test-observability" }
tempfile = "3"
# The sweep tests + their helpers build a tracing subscriber via
# `tracing_subscriber::fmt()` (only `tracing` is a non-dev dep). See review M8.
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# The helper bin links sadness-generator, so it only builds when the
# `crash-child` feature is on. `cargo build --workspace --no-default-features
# --features tombstone/crash-dumps` (the build.yaml `hole` target) does NOT
# enable `crash-child`, so this bin is skipped → no sadness-generator link.
[[bin]]
name = "crash_child"
path = "src/bin/crash_child.rs"
required-features = ["crash-child"]
