[package]
name = "tun-engine-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
skuld = "0.1"
trybuild = "1"

[[test]]
name = "freeze_tests"
path = "tests/freeze_tests.rs"
harness = false
