[package]
name = "tun-engine-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macro support for the tun-engine crate (provides #[freeze])."
repository = "https://github.com/bindreams/hole"
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
skuld = "0.1"
trybuild = "1"

[[test]]
name = "freeze_tests"
path = "tests/freeze_tests.rs"
harness = false
