[package]
name = "tun-engine"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
default-net = "0.22"
socket2 = "0.6"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }
# Pinned to the same minor version that shadowsocks-service 1.24 uses
# transitively (via tun-0.8.6) so cargo deduplicates the crate.
wintun-bindings = "0.7"

[dev-dependencies]
skuld = "0.1"
