[package]
name = "tun-engine"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
harness = false

[dependencies]
tun-engine-macros = { path = "../tun-engine-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
default-net = "0.22"
socket2 = "0.6"
tempfile = "3"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
tokio-util = "0.7"
tokio-socks = "0.5"
async-trait = "0.1"
arc-swap = "1"
# Pinned to the same versions shadowsocks-service 1.24 uses transitively
# (via tun-0.8.6) so cargo deduplicates the crates.
tun = { version = "0.8", features = ["async"] }
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ip", "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-udp",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }
# Pinned to the same minor version that shadowsocks-service 1.24 uses
# transitively (via tun-0.8.6) so cargo deduplicates the crate.
wintun-bindings = "0.7"

[dev-dependencies]
skuld = { version = "0.1", features = ["tokio"] }
