[package]
name = "cargo-wix"
version = "0.1.0"
edition = "2021"

[lib]
name = "cargo_wix"
harness = false

[[bin]]
name = "cargo-wix"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
cargo_metadata = "0.23"
thiserror = "2"
serde_json = "1"
dirs = "6"
zip = "8"

[build-dependencies]
ureq = "3"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "1"
msi = "0.10"
cab = "0.6"
zip = { version = "8", features = ["deflate"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }
